--- a/templates/login.html
+++ b/templates/login.html
@@ -20,10 +20,12 @@ block content %}
           {{ message }}
           <button
             type="button"
-            class="btn-close"
-            data-bs-dismiss="alert"
+            class="close"
+            data-dismiss="alert"
             aria-label="Close"
-          ></button>
+          >
+            <span aria-hidden="true">&times;</span>
+          </button>
         </div>
         {% endfor %}
       </div>
