--- a/templates/admin/question/admin_single_question.html
+++ b/templates/admin/question/admin_single_question.html
@@ -117,8 +117,8 @@ content %}{% include "admin/admin_wrapper.html" %}
         else %}N/a{% endif %}
       </p>
       <p class="col-12 col-sm-6">
-        <strong>Quiz Duration:</strong> {% if quiz %}{{
-        (quiz.time_duration|int)/3600000 }} Hour{% else %}N/a{% endif %}
+        <strong>Quiz Duration:</strong> {% if quiz %}{{ quiz.time_duration }} {{
+        quiz.time_unit }} Hour{% else %}N/a{% endif %}
       </p>
     </div>
     <div class="row">
