--- a/templates/admin/quiz/admin_single_quiz.html
+++ b/templates/admin/quiz/admin_single_quiz.html
@@ -136,7 +136,8 @@ content %}{% include "admin/admin_wrapper.html" %}
               </p>
               <p class="col-12 col-sm-6">
                 <strong>Quiz Duration:</strong> {% if quiz %}{{
-                (quiz.time_duration|int)/3600000 }} Hour{% else %}N/a{% endif %}
+                quiz.time_duration_hr }} hr. {{ quiz.time_duration_min }} min.
+                {% else %}N/a{% endif %}
               </p>
             </div>
             <div class="row">
@@ -204,8 +205,8 @@ content %}{% include "admin/admin_wrapper.html" %}
       <div class="d-flex align-items-center">
         <p class="mr-4">Total Rows: {{ total_rows }}</p>
         <p>
-          Current Page: {% if skip and take %} {{ ((skip|int)//take)+1 }} {%
-          else %}1{% endif %}
+          Current Page: {% if skip and take %} {{ ((skip|int)/take)+1 }} {% else
+          %}1{% endif %}
         </p>
       </div>
     </div>
