--- a/templates/admin/subjects/admin_single_subject.html
+++ b/templates/admin/subjects/admin_single_subject.html
@@ -76,8 +76,8 @@ content %}{% include "admin/admin_wrapper.html" %}
       <div class="d-flex align-items-center">
         <p class="mr-4">Total Rows: {{ total_rows }}</p>
         <p>
-          Current Page: {% if skip and take %} {{ ((skip|int)//take)+1 }} {%
-          else %}1{% endif %}
+          Current Page: {% if skip and take %} {{ ((skip|int)/take)+1 }} {% else
+          %}1{% endif %}
         </p>
       </div>
     </div>
